--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,64 @@
 :root {
-  --blanco: #ffffff;
-  --oscuro: #212121;
-  --primario: #ffc107;
-  --secundario: #0090a7;
-  --gris: #757575;
+    --blanco: #ffffff;
+    --oscuro: #212121;
+    --primario: #ffc107;
+    --secundario: #0090a7;
+    --gris: #757575;
 
-  --fuente-principal: 3.8rem;
+    --fuente-principal: 3.8rem;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 body {
-  font-size: 16px; /* 1rem = 10px*/
-  font-family: "Krub", sans-serif;
+    font-size: 16px; /* 1rem = 10px*/
+    font-family: "Krub", sans-serif;
 }
 
 .titulo {
-  text-align: center;
-  font-size: 1.6rem;
+    text-align: center;
+    font-size: 1.6rem;
 }
 
 .titulo span {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 .contenedor {
-  width: 120rem;
-  margin: 0 auto;
+    width: 120rem;
+    margin: 0 auto;
 }
 .nav-bg {
-  background-color: var(--secundario);
+    background-color: var(--secundario);
 }
 .navegacion-principal {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navegacion-principal a {
-  color: var(--blanco);
-  text-decoration: none;
-  font-size: 2rem;
-  font-weight: 700;
-  padding: 1rem;
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
 }
 
 .navegacion-principal a:hover {
-  background-color: var(--primario);
-  color: var(--oscuro);
+    background-color: var(--primario);
+    color: var(--oscuro);
+}
+
+@media (min-width: 480px) {
+    body {
+        background-color: blue;
+    }
+}
+
+@media (min-width: 768px) {
+    body {
+        background-color: cornflowerblue;
+    }
+}
+@media (mid-width: 768px) {
 }
