--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,9 @@ body {
     font-size: 2rem;
 }
 .contenedor {
-    width: 120rem;
+    /*Lo que hace es tomar 1200px si no se puede toma el 100%
+  del bloque disponible*/
+    max-width: 120rem;
     margin: 0 auto;
 }
 .nav-bg {
@@ -33,10 +35,19 @@ body {
 }
 .navegacion-principal {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+
+@media (min-width: 768px) {
+    .navegacion-principal {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .navegacion-principal a {
+    display: block;
+    text-align: center;
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
@@ -47,18 +58,4 @@ body {
 .navegacion-principal a:hover {
     background-color: var(--primario);
     color: var(--oscuro);
-}
-
-@media (min-width: 480px) {
-    body {
-        background-color: blue;
-    }
-}
-
-@media (min-width: 768px) {
-    body {
-        background-color: cornflowerblue;
-    }
-}
-@media (mid-width: 768px) {
 }
