--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,40 @@
 }
 
 html {
+    box-sizing: border-box;
     font-size: 62.5%;
 }
+
+/*after y before son elementos que aún no
+existen en el html, ya que solo existen en el css
+y se les considera pseudo elementos
+*/
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
     font-size: 16px; /* 1rem = 10px*/
     font-family: "Krub", sans-serif;
 }
 
-.titulo {
+h1 {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+h1,
+h2,
+h3 {
     text-align: center;
-    font-size: 1.6rem;
 }
 
 .titulo span {
@@ -30,6 +54,26 @@ body {
     max-width: 120rem;
     margin: 0 auto;
 }
+
+.boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    width: 90%;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .boton {
+        width: auto;
+    }
+}
+
 .nav-bg {
     background-color: var(--secundario);
 }
@@ -58,4 +102,28 @@ body {
 .navegacion-principal a:hover {
     background-color: var(--primario);
     color: var(--oscuro);
+}
+
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45rem;
+    position: relative;
+}
+
+.contenido-hero {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.65);
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--blanco);
 }
