--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ y se les considera pseudo elementos
 body {
     font-size: 16px; /* 1rem = 10px*/
     font-family: "Krub", sans-serif;
+    background-image: linear-gradient(to top, #dfe9f3 0%, var(--blanco) 100%);
 }
 
 h1 {
