--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    scroll-snap-type: y mandatory;
 }
 
 /*after y before son elementos que aún no
@@ -81,7 +82,7 @@ h3 {
     border: none;
 }
 
-.boton :hover {
+.boton:hover {
     cursor: pointer;
 }
 @media (min-width: 768px) {
@@ -166,6 +167,13 @@ h3 {
 Servicioes
 */
 
+.servicios,
+.navegacion-principal,
+.contacto,
+.footer {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
 @media (min-width: 768px) {
     .servicios {
         display: grid;
@@ -219,7 +227,21 @@ Servicioes
     color: var(--primario);
 }
 
-.contenedor-compos {
+@media (min-width: 768px) {
+    .contenedor-compos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+    .campo:nth-child(4) {
+        grid-row: 3 / 4;
+    }
 }
 
 .campo {
@@ -232,6 +254,9 @@ Servicioes
     margin-bottom: 0.5rem;
     display: block;
 }
+.campo textarea {
+    height: 18rem;
+}
 
 .imput-text {
     width: 100%;
@@ -242,4 +267,8 @@ Servicioes
 
 .enviar .boton {
     width: 100%;
+}
+
+.footer {
+    text-align: center;
 }
